--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p class="content">"Sesungguhnya Allah tidak akan mengubah keadaan suatu kaum hingga mereka merubah keadaan yang ada pada diri mereka sendiri." (Q.S. Ar Rad:11)</p>
                 <div class="links">
                     <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true">https://api.whatsapp.com/send?phone=6285742722306</i></a>
                     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 </div>
             </div>
