--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>ProfileCard</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script type="text/javascript" src="https://kit.fontawesome.com/e25b852c87.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="profile"></div>
-            <div class="text">
-                <p id="name"><span>MyName</span></p>
-                <p class="content">Nama: Nurdin Mahfud</p>
-                <p class="content">"Sesungguhnya Allah tidak akan mengubah keadaan suatu kaum hingga mereka merubah keadaan yang ada pada diri mereka sendiri." (Q.S. Ar Rad:11)</p>
-                <div class="links">
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true">https://api.whatsapp.com/send?phone=6285742722306</i></a>
-                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                </div>
-            </div>
-        </div>
-    </body>
+<head>
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="profile">
+        <img src="     
+    </div>
+</body>
 </html>
