--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="profile">
-        <img src="     
+        <img src="huotarou2.jpg">     
     </div>
 </body>
 </html>
