--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <div class="profile">
-        <img src="huotarou2.jpg">     
+        <img src="huotarou2.jpg">
+        <h1>My Name</h1>
     </div>
 </body>
 </html>
