--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="profile">
         <img src="huotarou2.jpg">
-        <h1>My Name</h1>
+        <h1>Nama : Nurdin Mahfud</h1>
     </div>
 </body>
 </html>
