--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <div class="profile">
         <img src="huotarou2.jpg">
         <h1>Nama : Nurdin Mahfud</h1>
+        <p>Kanji : 折木 奉太郎 
+Romanji : Oreki Hōtarō 
+Umur : 16
+Jenis Kelamin : Laki-laki
+Tinggi : 176 cm (5'9") 
+ Berat : 62 kg (137 lbs) 
+Dudukan : Murid
+Klub : Anggota klasik
+Kerabat : Tidak diketahui nama ayahnya
+Tomoe Oreki (Kakak)
+Debut Manga : Chapter 1
+Debut Anime : Episode 1
+Seiyuu Jepang : Yuichi Nakamura
+Seiyuu Inggris : ?
+
+Quotes Hōtarō Oreki :
+''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''
+"I'm not again socializing,so long as it's not tiring" (Oreki Houtarou) - See more at: http://ikimuraid.blogspot.com/2013/10/kata-kata-mutiara-anime-hyouka.html#sthash.mcls9FjN.dpuf"I'm not again socializing,so long as it's not tiring" (Oreki Houtarou) - See more at: http://ikimuraid.blogspot.com/2013/10/kata-kata-mutiara-anime-hyouka.html#sthash.mcls9FjN.dpuf
+''I'am not again socializing, so long as it's not tring.''
+''Jangan pedulikan apapun dan jangan melakukan sesuatu yang membuang-buang energi ini.''
+''Aku bisa hidup walaupun tanpa cinta.''
+''Semakin kamu berpengalaman, semakin ingin kamu memamerkannya.''
+''Aku bukannya malas, aku hanya menyimpan tenagaku.''
+''Jika aku tidak bisa melakukannya, aku tidak akan melakukannya. Tapi jika aku bisa melakukannya, aku akan melakukannya dengan cepat.''
+
+Tentang Hōtarō Oreki
+Anak laki-laki kelas 1 SMA yang mempunyai energi yang sedikit dan bisa dibilang sebagai orang yang malas. Walaupun dia tidak suka terlibat dengan sesuatu, tapi kalau dia diberitahukan suatu kasus/misteri maka ia menganalisis misteri itu hingga terpecahkan.</p>
     </div>
 </body>
 </html>
