--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <div class="profile">
         <img src="huotarou2.jpg">
         <h1>Nama : Nurdin Mahfud</h1>
-        <p>Kanji : 折木 奉太郎 
-Romanji : Oreki Hōtarō 
-Umur : 16
-Jenis Kelamin : Laki-laki
-Tinggi : 176 cm (5'9") 
- Berat : 62 kg (137 lbs) 
-Dudukan : Murid
-Klub : Anggota klasik
-Kerabat : Tidak diketahui nama ayahnya
-Tomoe Oreki (Kakak)
-Debut Manga : Chapter 1
-Debut Anime : Episode 1
-Seiyuu Jepang : Yuichi Nakamura
-Seiyuu Inggris : ?
+        <p>Kanji : 折木 奉太郎<br>
+<br>Romanji : Oreki Hōtarō 
+<br>Umur : 16
+<br>Jenis Kelamin : Laki-laki
+<br>Tinggi : 176 cm (5'9") 
+<br>Berat : 62 kg (137 lbs) 
+<br>Dudukan : Murid
+<br>Klub : Anggota klasik
+<br>Kerabat : Tidak diketahui nama ayahnya
+<br>Tomoe Oreki (Kakak)
+<br>Debut Manga : Chapter 1
+<br>Debut Anime : Episode 1
+<br>Seiyuu Jepang : Yuichi Nakamura
+<br>Seiyuu Inggris : ?
 
 Quotes Hōtarō Oreki :
 ''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''
-"I'm not again socializing,so long as it's not tiring" (Oreki Houtarou) - See more at: http://ikimuraid.blogspot.com/2013/10/kata-kata-mutiara-anime-hyouka.html#sthash.mcls9FjN.dpuf"I'm not again socializing,so long as it's not tiring" (Oreki Houtarou) - See more at: http://ikimuraid.blogspot.com/2013/10/kata-kata-mutiara-anime-hyouka.html#sthash.mcls9FjN.dpuf
+"I'm not again socializing,so long as it's not tiring" 
 ''I'am not again socializing, so long as it's not tring.''
 ''Jangan pedulikan apapun dan jangan melakukan sesuatu yang membuang-buang energi ini.''
 ''Aku bisa hidup walaupun tanpa cinta.''
