--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
         <img src="huotarou2.jpg">
         <h1>Nama : Nurdin Mahfud</h1>
         <p>Kanji : 折木 奉太郎<br>
-<br>Romanji : Oreki Hōtarō 
-<br>Umur : 16
-<br>Jenis Kelamin : Laki-laki
-<br>Tinggi : 176 cm (5'9") 
-<br>Berat : 62 kg (137 lbs) 
-<br>Dudukan : Murid
-<br>Klub : Anggota klasik
-<br>Kerabat : Tidak diketahui nama ayahnya
-<br>Tomoe Oreki (Kakak)
-<br>Debut Manga : Chapter 1
-<br>Debut Anime : Episode 1
-<br>Seiyuu Jepang : Yuichi Nakamura
-<br>Seiyuu Inggris : ?
+Romanji : Oreki Hōtarō<br> 
+Umur : 16<br>
+Jenis Kelamin : Laki-laki<br>
+Tinggi : 176 cm (5'9")<br>
+Berat : 62 kg (137 lbs)<br>
+Dudukan : Murid<br>
+Klub : Anggota klasik<br>
+Debut Manga : Chapter 1<br>
+Debut Anime : Episode 1<br>
+Seiyuu Jepang : Yuichi Nakamura<br>
+Seiyuu Inggris : ?<br>
 
 Quotes Hōtarō Oreki :
 ''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''
