--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ Seiyuu Jepang : Yuichi Nakamura<br>
 Seiyuu Inggris : ?<br>
 
 Quotes Hōtarō Oreki :
-''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''
-"I'm not again socializing,so long as it's not tiring" 
-''I'am not again socializing, so long as it's not tring.''
-''Jangan pedulikan apapun dan jangan melakukan sesuatu yang membuang-buang energi ini.''
-''Aku bisa hidup walaupun tanpa cinta.''
-''Semakin kamu berpengalaman, semakin ingin kamu memamerkannya.''
-''Aku bukannya malas, aku hanya menyimpan tenagaku.''
-''Jika aku tidak bisa melakukannya, aku tidak akan melakukannya. Tapi jika aku bisa melakukannya, aku akan melakukannya dengan cepat.''
+''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''<br>
+"I'm not again socializing,so long as it's not tiring" <br>
+''I'am not again socializing, so long as it's not tring.''<br>
+''Jangan pedulikan apapun dan jangan melakukan sesuatu yang membuang-buang energi ini.''<br>
+''Aku bisa hidup walaupun tanpa cinta.''<br>
+''Semakin kamu berpengalaman, semakin ingin kamu memamerkannya.''<br>
+''Aku bukannya malas, aku hanya menyimpan tenagaku.''<br>
+''Jika aku tidak bisa melakukannya, aku tidak akan melakukannya. Tapi jika aku bisa melakukannya, aku akan melakukannya dengan cepat.''<br>
 
 Tentang Hōtarō Oreki
 Anak laki-laki kelas 1 SMA yang mempunyai energi yang sedikit dan bisa dibilang sebagai orang yang malas. Walaupun dia tidak suka terlibat dengan sesuatu, tapi kalau dia diberitahukan suatu kasus/misteri maka ia menganalisis misteri itu hingga terpecahkan.</p>
