--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
     <div class="profile">
         <img src="huotarou2.jpg">
         <h1>Nama : Nurdin Mahfud</h1>
-        <p>Kanji : 折木 奉太郎<br>
-Romanji : Oreki Hōtarō<br> 
-Umur : 16<br>
-Jenis Kelamin : Laki-laki<br>
-Tinggi : 176 cm (5'9")<br>
-Berat : 62 kg (137 lbs)<br>
+        <p>Umur : 16<br>
+            Jenis Kelamin : Laki-laki<br>
+Tinggi : 169<br>
+Berat : 52<br>
+Alamat : Suren Kidul Rt 04/Rw 09,Bekonang,Mojolaban,Sukoharjo,Jawa Tengah
 Dudukan : Murid<br>
-Klub : Anggota klasik<br>
-Debut Manga : Chapter 1<br>
-Debut Anime : Episode 1<br>
-Seiyuu Jepang : Yuichi Nakamura<br>
-Seiyuu Inggris : ?<br>
+Jurusan : RPL(Rekayasa Perangkat Lunak)<br>
+Sekolah : SMK Muhammadiyah 1 Sukoharjo<br>
 
-Quotes Hōtarō Oreki :
+            <b>Quotes Hōtarō Oreki :</b>
 ''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''<br>
 "I'm not again socializing,so long as it's not tiring" <br>
 ''I'am not again socializing, so long as it's not tring.''<br>
