--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <img src="huotarou2.jpg">
         <h1>Nama : Nurdin Mahfud</h1>
         <p>Umur : 16<br>
-            Jenis Kelamin : Laki-laki<br>
-Tinggi : 169<br>
-Berat : 52<br>
-Alamat : Suren Kidul Rt 04/Rw 09,Bekonang,Mojolaban,Sukoharjo,Jawa Tengah
-Dudukan : Murid<br>
-Jurusan : RPL(Rekayasa Perangkat Lunak)<br>
-Sekolah : SMK Muhammadiyah 1 Sukoharjo<br>
+            <b>Jenis Kelamin :</b> Laki-laki<br>
+            <b>Tinggi :</b> 169<br>
+            <b>Berat :</b> 52<br>
+            <b>Alamat :</b> Suren Kidul Rt 04/Rw 09,Bekonang,Mojolaban,Sukoharjo,Jawa Tengah
+            <b>Dudukan</b> : Murid<br>
+            <b>Jurusan :</b> RPL(Rekayasa Perangkat Lunak)<br>
+            <b>Sekolah :</b> SMK Muhammadiyah 1 Sukoharjo<br>
 
-            <b>Quotes Hōtarō Oreki :</b>
+            <b>Quotes :</b><br>
 ''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''<br>
 "I'm not again socializing,so long as it's not tiring" <br>
 ''I'am not again socializing, so long as it's not tring.''<br>
@@ -25,10 +25,7 @@ Sekolah : SMK Muhammadiyah 1 Sukoharjo<br>
 ''Aku bisa hidup walaupun tanpa cinta.''<br>
 ''Semakin kamu berpengalaman, semakin ingin kamu memamerkannya.''<br>
 ''Aku bukannya malas, aku hanya menyimpan tenagaku.''<br>
-''Jika aku tidak bisa melakukannya, aku tidak akan melakukannya. Tapi jika aku bisa melakukannya, aku akan melakukannya dengan cepat.''<br>
-
-Tentang Hōtarō Oreki
-Anak laki-laki kelas 1 SMA yang mempunyai energi yang sedikit dan bisa dibilang sebagai orang yang malas. Walaupun dia tidak suka terlibat dengan sesuatu, tapi kalau dia diberitahukan suatu kasus/misteri maka ia menganalisis misteri itu hingga terpecahkan.</p>
+''Jika aku tidak bisa melakukannya, aku tidak akan melakukannya. Tapi jika aku bisa melakukannya, aku akan melakukannya dengan cepat.''<br></p>
     </div>
 </body>
 </html>
