--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <b>Sekolah :</b> SMK Muhammadiyah 1 Sukoharjo<br>
 
             <b>Quotes :</b><br>
-''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''<br>
+<i>''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku ini.''<br>
 "I'm not again socializing,so long as it's not tiring" <br>
 ''I'am not again socializing, so long as it's not tring.''<br>
 ''Jangan pedulikan apapun dan jangan melakukan sesuatu yang membuang-buang energi ini.''<br>
 ''Aku bisa hidup walaupun tanpa cinta.''<br>
-''Semakin kamu berpengalaman, semakin ingin kamu memamerkannya.''<br>
-''Aku bukannya malas, aku hanya menyimpan tenagaku.''<br>
-''Jika aku tidak bisa melakukannya, aku tidak akan melakukannya. Tapi jika aku bisa melakukannya, aku akan melakukannya dengan cepat.''<br></p>
+''Agar kamu tidak bersedih hati terhadap apa yang luput dari kamu dan tidak pula terlalu gembira terhadap apa yang diberikan-Nya kepadamu. Dan Allah tidak menyukai terhadap orang yang sombong dan membanggakan diri." (Q.S Al-Hadid: 23)<br>
+''Jangan kamu merasa lemah dan jangan bersedih, sebab kamu paling tinggi derajatnya jika kamu beriman." (Q.S Ali Imran: 139)<br>
+''Jika aku tidak bisa melakukannya, aku tidak akan melakukannya. Tapi jika aku bisa melakukannya, aku akan melakukannya dengan cepat.''<br></i></p>
     </div>
 </body>
 </html>
