--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 <body>
     <div class="profile">
         <img src="huotarou2.jpg">
-        <h1><b>Nama :</b> Nurdin Mahfud</h1>
-        <p><b>Umur :</b> 16<br>
+        <h1><b>Biodata</b></h1>
+        <p><b><Nama :</b> Nurdin Mahfud<br>
+            <b>Umur :</b> 16<br>
             <b>Jenis Kelamin :</b> Laki-laki<br>
             <b>Tinggi :</b> 169<br>
             <b>Berat :</b> 52<br>
             <b>Alamat :</b> Suren Kidul Rt 04/Rw 09, Bekonang, Mojolaban, Sukoharjo, Jawa Tengah<br>
             <b>Dudukan</b> : Murid<br>
-            <b>Jurusan :</b> RPL(Rekayasa Perangkat Lunak)<br>
+            <b>Jurusan :</b> RPL (Rekayasa Perangkat Lunak)<br>
             <b>Sekolah :</b> SMK Muhammadiyah 1 Sukoharjo<br>
 
             <b>Quotes :</b><br>
