--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <div class="profile">
         <img src="huotarou2.jpg">
         <h1><b>Biodata</b></h1>
-        <p><b><Nama :</b> Nurdin Mahfud<br>
+        <p>
+            <b><Nama :</b> Nurdin Mahfud<br>
             <b>Umur :</b> 16<br>
             <b>Jenis Kelamin :</b> Laki-laki<br>
             <b>Tinggi :</b> 169<br>
