--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <b>Tinggi :</b> 169<br>
             <b>Berat :</b> 52<br>
             <b>Alamat :</b> Suren Kidul Rt 04/Rw 09, Bekonang, Mojolaban, Sukoharjo, Jawa Tengah<br>
-            <b>Dudukan</b> : Murid<br>
+            <b>Dudukan :</b> Murid<br>
             <b>Jurusan :</b> RPL (Rekayasa Perangkat Lunak)<br>
             <b>Sekolah :</b> SMK Muhammadiyah 1 Sukoharjo<br>
 
