--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <b>Quotes :</b><br>
 <i>''Aku bukan bodoh, aku hanya terlalu malas untuk menunjukkan kepintaranku.''<br>
 "I'm not again socializing,so long as it's not tiring" <br>
-''Aku bisa hidup walaupun tanpa cinta.''<br>
+''Maka sesungguhnya bersama kesulitan itu ada kemudahan." (QS Al Insyirah 5)<br>
 ''Agar kamu tidak bersedih hati terhadap apa yang luput dari kamu dan tidak pula terlalu gembira terhadap apa yang diberikan-Nya kepadamu. Dan Allah tidak menyukai terhadap orang yang sombong dan membanggakan diri." (Q.S Al-Hadid: 23)<br>
 ''Jangan kamu merasa lemah dan jangan bersedih, sebab kamu paling tinggi derajatnya jika kamu beriman." (Q.S Ali Imran: 139)<br>
-''Jika aku tidak bisa melakukannya, aku tidak akan melakukannya. Tapi jika aku bisa melakukannya, aku akan melakukannya dengan cepat.''<br></i></p>
+''Ketahuilah bahwa kemenangan bersama kesabaran, kelapangan bersama kesempitan, dan kesulitan bersama kemudahan." (HR Tirmidzi)<br></i></p>
     </div>
 </body>
 </html>
