--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 ''Agar kamu tidak bersedih hati terhadap apa yang luput dari kamu dan tidak pula terlalu gembira terhadap apa yang diberikan-Nya kepadamu. Dan Allah tidak menyukai terhadap orang yang sombong dan membanggakan diri." (Q.S Al-Hadid: 23)<br>
 ''Jangan kamu merasa lemah dan jangan bersedih, sebab kamu paling tinggi derajatnya jika kamu beriman." (Q.S Ali Imran: 139)<br>
 ''Ketahuilah bahwa kemenangan bersama kesabaran, kelapangan bersama kesempitan, dan kesulitan bersama kemudahan." (HR Tirmidzi)<br></i></p>
+        <a href="https://api.whatsapp.com/send?phone=6285742722306&teks=Hi">Whatsapp</a>
     </div>
 </body>
 </html>
