--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="profile">
         <img src="huotarou2.jpg">
-        <body style="background-coloor:black;"></body>
+        <body style="background-color:black;"></body>
         <h1><b>Biodata</b></h1>
         <p>
             <b>Nama :</b> Nurdin Mahfud<br>
