--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 ''Jangan kamu merasa lemah dan jangan bersedih, sebab kamu paling tinggi derajatnya jika kamu beriman." (Q.S Ali Imran: 139)<br>
 ''Ketahuilah bahwa kemenangan bersama kesabaran, kelapangan bersama kesempitan, dan kesulitan bersama kemudahan." (HR Tirmidzi)<br></i></p>
         <a href="https://api.whatsapp.com/send?phone=6285742722306&teks=Hi" style="color: #39e24f";>WhatsApp</a><br>
-        <a href="https://www.instagram.com/invites/contact/?i=13i2li6ctkrwt&utm_content=3v0124u" style="color: #39e24f";>Instagram</a>
+        <a href="https://www.instagram.com/invites/contact/?i=13i2li6ctkrwt&utm_content=3v0124u" style="color: #be50f1";>Instagram</a>
     </div>
 </body>
 </html>
