--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <b>Tinggi :</b> 169<br>
             <b>Berat :</b> 52<br>
             <b>Alamat :</b> Suren Kidul Rt 04/Rw 09, Bekonang, Mojolaban, Sukoharjo, Jawa Tengah<br>
-            <b>Kudukan :</b> Murid<br>
+            <b>Kedukan :</b> Murid<br>
             <b>Jurusan :</b> RPL (Rekayasa Perangkat Lunak)<br>
             <b>Sekolah :</b> SMK Muhammadiyah 1 Sukoharjo<br>
 
@@ -27,7 +27,7 @@
 ''Agar kamu tidak bersedih hati terhadap apa yang luput dari kamu dan tidak pula terlalu gembira terhadap apa yang diberikan-Nya kepadamu. Dan Allah tidak menyukai terhadap orang yang sombong dan membanggakan diri." (Q.S Al-Hadid: 23)<br>
 ''Jangan kamu merasa lemah dan jangan bersedih, sebab kamu paling tinggi derajatnya jika kamu beriman." (Q.S Ali Imran: 139)<br>
 ''Ketahuilah bahwa kemenangan bersama kesabaran, kelapangan bersama kesempitan, dan kesulitan bersama kemudahan." (HR Tirmidzi)<br></i></p>
-        <a href="https://api.whatsapp.com/send?phone=6285742722306&teks=Hi" style="color: #39e24f";>WhatsApp</a><br>
+        <a href="https://api.whatsapp.com/send?phone=6285742722306&teks=Hi" style="color: #39e24f";>WhatsApp</a>
         <a href="https://www.instagram.com/invites/contact/?i=13i2li6ctkrwt&utm_content=3v0124u" style="color: #be50f1";>Instagram</a>
     </div>
 </body>
