--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <b>Tinggi :</b> 169<br>
             <b>Berat :</b> 52<br>
             <b>Alamat :</b> Suren Kidul Rt 04/Rw 09, Bekonang, Mojolaban, Sukoharjo, Jawa Tengah<br>
-            <b>Kedukan :</b> Murid<br>
+            <b>Kedudukan :</b> Murid<br>
             <b>Jurusan :</b> RPL (Rekayasa Perangkat Lunak)<br>
             <b>Sekolah :</b> SMK Muhammadiyah 1 Sukoharjo<br>
 
