--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="profile">
-        <img src="huotarou2.jpg"style="width: 495px; height: 495px">
+        <img src="huotarou2.jpg">
         <body style="background-color:black;"></body>
         <h1><b>Biodata</b></h1>
         <p>
